@@ -30,6 +30,7 @@
 		<li><a href="#" title="Modalbox without Ajax Test" onclick="Modalbox.show(Builder.build('<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'), {title: this.title, height: 150}); return false;">Modalbox without Ajax Builder Test</a></li>
 		<li><a href="#" title="Modalbox without Ajax plain HTML test" onclick="Modalbox.show('<h1>HTML Header</h1><input type=\'button\' value=\'Resize me +100\' onclick=\'Modalbox.resize(0, 120)\' /><input type=\'button\' value=\'Resize me -100\' onclick=\'Modalbox.resize(0, -100)\' />', {title: this.title, height: 250 }); return false;">Modalbox without Ajax plain HTML test</a></li>
 		<li><a href="#" title="Modalbox without Ajax by element ID test" onclick="Modalbox.show($('testContent'), {title: this.title, height: 250 }); return false;">Modalbox without Ajax by element ID test</a></li>
+		<li><a href="#" title="Modalbox activate / deactivate test" onclick="Modalbox.show('<h1>Activate / Deactivate Test</h1><input type=\'button\' value=\'Deactivate\' onclick=\'Modalbox.deactivate()\' /><input type=\'button\' value=\'Activate\' onclick=\'Modalbox.activate()\' /><br /><br />', {title: this.title }); return false;">Modalbox activate / deactivate test</a></li>
 		<li><a href="#" title="Modalbox wrong parameter test" onclick="Modalbox.show(123, {title: this.title }); return false;">Modalbox wrong parameter test</a></li>
 	</ul>
 	
